--- a/src/main/resources/locale/locale_en.properties
+++ b/src/main/resources/locale/locale_en.properties
@@ -8,9 +8,6 @@ login.fogot.password=Forgot your password?
 login.signup=Sign Up →
 
 register.title=Sign Up
+register.email=Email
 register.password=Password
-register.confirm.password=Confirm password
 register.submit=Signup
-
-username.size=Username must be between {min} and {max} characters long.
-password.size=Password must be between {min} and {max} characters long.
