--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -8,9 +8,7 @@ login.fogot.password=Забыли пароль?
 login.signup=Регистрация →
 
 register.title=Регистрация
+register.email=Email
 register.password=Пароль
-register.confirm.password=Подтвердите пароль
 register.submit=Зарегистрироваться
 
-username.size=Логин должен состоять из {min} до {max} символов.
-password.size=Пароль должен состоять из {min} до {max} символов.
